# tttc_practice

clang/lab1/Rodiontseva_Irina/: CMakeLists.txt  PrintDataTypeInfo.cpp
clang/test/lab1/Rodiontseva_Irina/: test_plugin.cpp
